--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "pages/api/hello.js",
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules"
