todo app example

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,22 @@
 {
   "extends": ["airbnb-typescript"],
+  "plugins": ["simple-import-sort", "eslint-plugin-import-order-alphabetical"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
-    "import/extensions": [
-      "error",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-    ],
     "import/prefer-default-export": "off",
     "no-console": "off",
     "react/prop-types": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "max-classes-per-file": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
+    "import/first": "error",
+    "import/newline-after-import": "error",
+    "import/no-duplicates": "error",
+    "no-unused-expressions": "off"
   }
 }
