--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "lint": "eslint \"**/*.{ts,tsx}\" --ignore-pattern node_modules/"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "izitoast": "^1.4.0",
     "next": "10.0.8",
+    "notifier-js": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8"
+    "react-responsive-modal": "^6.0.1",
+    "react-toastify": "^7.0.3",
+    "sass": "^1.32.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import-order-alphabetical": "^1.0.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   }
