--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv-webpack": "^7.0.2",
     "izitoast": "^1.4.0",
     "next": "10.0.8",
     "notifier-js": "^1.0.0",
