--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.1",
     "dotenv-webpack": "^7.0.2",
     "izitoast": "^1.4.0",
-    "next": "10.0.8",
+    "lodash": "^4.17.21",
+    "next": "^11.1.2",
     "notifier-js": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -23,6 +24,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.173",
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/uuid": "^8.3.0",
@@ -36,6 +38,6 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.3"
   }
 }
