--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "@styles/*": [
         "styles/*"
+      ],
+      "@api/*": [
+        "src/services/api/*"
       ]
     }
   },
