change the readme file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       ],
       "@api/*": [
         "src/services/api/*"
+      ],
+      "@views/*": [
+        "src/views/*"
       ]
     }
   },
